--- a/www/html/signIn.html
+++ b/www/html/signIn.html
@@ -15,10 +15,7 @@
 <body>
     <div class="container" style="padding:0px 0px 0px 0px;position:relative">
         <div w3-include-html="menu.html"></div>
-        <!-- Dołącz plik podpowiedzi -->
-        <div w3-include-html="searchTips.html"></div>
-        <!-- Koniec dołączenia podpowiedzi -->
-        <dir onclick="displayShow('liTips','false')">
+        <dir>
             <!--Twój HTML-->
             <div>
                 <form class="signUp">
@@ -47,7 +44,6 @@
         </dir>
     </div>
     <script>includeHTML();</script>
-    <script>filterSearch();</script>
     <script>logIn();</script>
     <script>signIn();</script>
 </body>
