--- a/www/html/menu.html
+++ b/www/html/menu.html
@@ -1,13 +1,13 @@
 <!-- Top Navigation Menu -->
 <div class="topnav">
-    <input type="text" id="filterInput" onclick="displayShow('liTips','true')" onkeyup="filterSearch()" class="search-focus" style="padding-left:26px;font-size:16px" placeholder="Search">
-    <a class="active" onclick="displayShow('liTips','false')" style="text-align:center;font-size:15px;color:white"><b>Forex Offline</b></a>
-    <div id="myLinks" onclick="displayShow('liTips','false')">
+    <a class="active" style="text-align:center;font-size:15px;color:white"><b>FOREX OFFLINE</b></a>
+    <div id="myLinks">
         <a href="../index.html">HOME</a>
         <a href="transaction.html">DODAJ TRANSAKCJE</a>
         <a href="history.html">HISTORIA OPERACJI</a>
         <a href="account.html">KONTO UŻYTKOWNIKA</a>
         <a href="signIn.html">ZALOGUJ SIĘ</a>
+        <a href="about.html">O NAS</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="menuFunction()">
         <i class="fa fa-bars"></i>
